# final-rosject

.rviz/: persistent_settings
catkin_ws/devel/lib/locobot_sorting/: object_detection_utils.py  object_sorter_grasp.py
catkin_ws/devel/lib/pkgconfig/: locobot_sorting.pc
catkin_ws/devel/share/locobot_sorting/cmake/: locobot_sortingConfig.cmake
catkin_ws/src/locobot_sorting/: CMakeLists.txt  README.md
catkin_ws/src/locobot_sorting/launch/: setup_simulation.launch  sorting_project.launch
catkin_ws/src/locobot_sorting/scripts/: pick_and_place.py
